# imxrtnsy

./: .gitignore  Makefile  README.md  build.sh  firmware.elf  firmware.hex
.github/workflows/: build.yml
core/: startup.c
src/: desc_capture.c  desc_capture.h  ferrum.c  ferrum.h  font4x6.c  font6x8.c  ft6206.c  gpt_profile.h  humanize.c  humanize.h  ili9341.c  kmbox.c  kmbox.h  kmnet.c  main.c  main.c.bak  makcu.c  makcu.h  smooth.c  smooth.h  smooth_config.h  st7735.c  tft.c  tft.h  tft_display.c  tft_display.h  uart.c  uart.h  usb_device.c  usb_device.h  usb_host.c  usb_host.h
uart_bridge/: CMakeLists.txt  main.c
